boreal/tests/assets/invalid_files/compilation/unknown_identifier2.yar
// [error: unknown identifier "foo"]
rule a {
    condition:
        for any a in foo: (true)
}
